--- a/index.qmd
+++ b/index.qmd
@@ -5,3 +5,35 @@ format:
     toc: true
     theme: ../style.scss
 ---
+
+Welcome to my notes on Methods for Simple, Multiple, and Generalized Linear Models! 
+
+```{r, echo=FALSE, out.width='100%'}
+knitr::include_graphics('week2/standalone_figures/normal_equation_projection/normal_equation_projection.svg')
+```
+
+I hope you will enjoy them, but you do have to be prepared: the notation is pretty 
+all over the place. 
+
+I've been honing my $\LaTeX$ tikz and pgfplots skills throughout this course, 
+so I hope you enjoy the diagrams I have diligently been creating throughout. 
+
+Besides the above, here are a couple more figures I'm so thrilled to have been
+able to learn how to make in $\LaTeX$.
+
+```{r, echo=FALSE, out.width='100%'}
+knitr::include_graphics('week1/standalone_figures/scientific_process/scientific_process.svg')
+knitr::include_graphics('week2/standalone_figures/pr_density_of_linear_model/pr_density_of_linear_model.svg')
+knitr::include_graphics('week3/standalone_figures/residual_decompositions/residual_decomposition.svg')
+```
+
+:::{.cooltip}
+You may be asking, why on Earth would you spend your time learning tikz when it's so 
+convoluted, tortured, arcane, and generally a pain-in-the-ass?
+
+I have two reasons: 
+  
+  1. I find it to be nicer for producing mathematical "infographics" (explanatory graphics) than R's `{ggplot2}`
+    which I love to death for data visualization. 
+  2. [left to the reader as an exercise]
+:::
